--- a/src/Templates/streamsLive.html.twig
+++ b/src/Templates/streamsLive.html.twig
@@ -43,7 +43,9 @@
                     </a>
                 {% endif %}
             {% endif %}
-            {{ catName }}
+            <span class="hidden-xs">
+                {{ catName }}
+            </span>
         </div>
         <div class="pull-right">
             <div class="btn-group" role="group">
