--- a/src/Templates/base.html.twig
+++ b/src/Templates/base.html.twig
@@ -98,12 +98,12 @@
             .flex-images .item img {
                 width: 100px;
                 height: 160px;
+                object-fit: contain;
             }
 
             #flex a:focus > .item {
-                border: 3px solid #e8b12c;
-                width: 96px;
-                height: 156px;
+                border: 4px solid #e8b12c;
+                margin: 1px;
             }
 
             #flex a:focus > .item > .over {
