--- a/src/Templates/streamsMovie.html.twig
+++ b/src/Templates/streamsMovie.html.twig
@@ -113,8 +113,9 @@
                    data-name="{{ stream.name|lower }}"
                    data-added="{{ stream.added.timestamp }}"
                    data-rate="{{ stream.rating5based }}">
-                    <div class="item" style="{% if streamView[stream.streamId] is defined %}opacity: 0.3{% endif %}">
+                    <div class="item">
                         <img {# if loop.index > 50 %}data-{% endif #}src="{{ baseUrlAbsolute ~ stream.streamIcon }}"
+                             style="{% if streamView[stream.streamId] is defined %}opacity: 0.2{% endif %}"
                              alt="{{ stream.name }}"
                              title="{{ stream.name }}">
                         <div class="over">
