--- a/src/Templates/base.html.twig
+++ b/src/Templates/base.html.twig
@@ -95,6 +95,15 @@
                 text-align: center;
             }
 
+            #flex .vignette {
+                font-size: 25px;
+                position: absolute;
+                top: 0;
+                right: 5px;
+                color: #ff0000;
+                -webkit-text-stroke: 1px #7f0000;
+            }
+
             .flex-images .item img {
                 width: 100px;
                 height: 160px;
