--- a/src/Templates/homeMain.html.twig
+++ b/src/Templates/homeMain.html.twig
@@ -79,6 +79,7 @@
                         {% endif %}
                         <div class="col-md-4 col-sm-12 col-xs-12">
                             <a class="btn center-block btn-lg logoutBtn rippler rippler-default"
+                               href="{{ baseUrlAbsolute }}/caches/clearMine">
                                 <i class="fa fa-trash" style="padding-top: 0px;"></i> DELETE CACHE
                             </a>
                         </div>
