--- a/src/Templates/homeMain.html.twig
+++ b/src/Templates/homeMain.html.twig
@@ -97,7 +97,10 @@
                             </span>
                         </a>
                     </h4>
-                    <h4 class="text-center" style="color: #fff; top: 50px; float:left;width: 100%;position: relative;    text-transform: uppercase;">Connected as: {{ connectedAs }}</h4>
+                    <h4 class="text-center" style="color: #fff; top: 50px; float:left;width: 100%;position: relative;    text-transform: none;">CONNECTED AS: {{ connectedAs }}</h4>
+{#                    <small class="text-center" style="color: #fff; top: 50px; float:left;width: 100%;position: relative;">#}
+{#                        {{ userAgent }}#}
+{#                    </small>#}
                 </div>
             </div>
         </div>
