--- a/src/Templates/streamsSerie.html.twig
+++ b/src/Templates/streamsSerie.html.twig
@@ -13,6 +13,9 @@
             <a href="{{ baseUrlAbsolute ~ homeUrlAbsolute }}" tabindex="5" class="btn">
                 <i class="fa fa-home"></i>
             </a>
+            <a tabindex="5" class="btn toggleSidebar">
+                <i class="fa fa-bars"></i>
+            </a>
             {% if catName != '' %}
                 {% if isHidden %}
                     <a href="{{ baseUrlAbsolute }}/category/unhide/serie/{{ currentCat }}" tabindex="6" class="btn">
@@ -61,6 +64,28 @@
                 </a>
             </div>
         </div>
+    </div>
+    <div id="flex" class="flex-images col-sm-offset-3 col-sm-9 col-xs-offset-3 col-xs-9 col-md-offset-2 col-md-10">
+        {% for stream in streams %}
+            <a href="{{ baseUrlAbsolute }}/streams/serieInfo/{{ stream.serieId }}"
+               tabindex="1"
+               class="item-link"
+               data-name="{{ stream.name|lower }}"
+               data-added="{{ stream.added.timestamp }}"
+               data-rate="{{ stream.rating5based }}">
+                <div class="item">
+                    <img {# if loop.index > 50 %}data-{% endif #}src="{{ baseUrlAbsolute ~ stream.cover }}"
+                         alt="{{ stream.name }}"
+                         title="{{ stream.name }}">
+                    <div class="over">
+                        {{ stream.name }}
+
+                        {% include 'Module/stars.html.twig' with {'rating': stream.rating5based} %}
+                    </div>
+                    <div class="vignette" style="{% if currentCat != 'favorites' or stream|hasSeeLastEpisode %}display:none;{% endif %}">●</div>
+                </div>
+            </a>
+        {% endfor %}
     </div>
     <div class="sidenav col-sm-3 col-xs-3 col-md-2">
         <ul>
@@ -118,40 +143,15 @@
             {% endfor %}
         </ul>
     </div>
-    <div id="flex" class="flex-images col-sm-offset-3 col-sm-9 col-xs-offset-3 col-xs-9 col-md-offset-2 col-md-10">
-        {% for stream in streams %}
-            <a href="{{ baseUrlAbsolute }}/streams/serieInfo/{{ stream.serieId }}"
-               tabindex="1"
-               class="item-link"
-               data-name="{{ stream.name|lower }}"
-               data-added="{{ stream.added.timestamp }}"
-               data-rate="{{ stream.rating5based }}">
-                <div class="item">
-                    <img {# if loop.index > 50 %}data-{% endif #}src="{{ baseUrlAbsolute ~ stream.cover }}"
-                         alt="{{ stream.name }}"
-                         title="{{ stream.name }}">
-                    <div class="over">
-                        {{ stream.name }}
-
-                        {% include 'Module/stars.html.twig' with {'rating': stream.rating5based} %}
-                    </div>
-                    <div class="vignette" style="{% if currentCat != 'favorites' or stream|hasSeeLastEpisode %}display:none;{% endif %}">●</div>
-                </div>
-            </a>
-        {% endfor %}
-    </div>
     {% include 'Module/lazyload.html.twig' %}
 {% endblock %}
 
 {% block js %}
     <script>
-        $('#hiddenCats').click(function () {
-            $('.hidden-cat').toggle();
-        });
-
         $('.item-link').on('long-press', function(e) {
             alert('thisislong');
         });
+        $('.toggleSidebar').click();
     </script>
     <script src="{{ baseUrlAbsolute }}/js/long-press-event.min.js"></script>
 {% endblock %}
